# internal/controller/http/v1/router.go
@@ -51,5 +51,6 @@ func NewRouter(handler *gin.Engine, l logger.Interface, s *usecase.Services, cas
 		newSpecialtyRoutes(h, s.Specialty, l, casbinEnforcer, rd)
 		newQualificationRoutes(h, s.Qualification, l, casbinEnforcer, rd)
 		newDisciplineRoutes(h, s.Discipline, l, casbinEnforcer, rd)
+		newDisciplineModuleRoutes(h, s.DisciplineModule, l, casbinEnforcer, rd)
 	}
 }
